# SofaiFx-bot

./: .dockerignore  .gitignore  ADMIN_DASHBOARD_GUIDE.md  ADMIN_FEATURES.md  AUTHENTICATION.md  CHART_FEATURE.md  CHART_IMPLEMENTATION.md  CHART_QUICKSTART.md  CHART_VISUAL_GUIDE.md  COMPLETE_BOT_FEATURES_SUMMARY.md  DATA_INTEGRATION_SUMMARY.md  DATA_USAGE_OPTIMIZATION.md  DATA_USAGE_OPTIMIZATION_QUICKSTART.md  DATA_USAGE_OPTIMIZATION_TECHNICAL.md  DEBUGGING_SUMMARY.md  DEBUG_SIGNAL_ISSUE.md  DELIVERABLES.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_CHECKLIST_MT5_FIX.md  Dockerfile  FILES_SUMMARY.md  FIX_SUMMARY.md  FRONTEND_FEATURES_GUIDE.md  FRONTEND_FEATURES_IMPLEMENTATION.md  FRONTEND_IMPLEMENTATION_COMPLETE.md  FRONTEND_UI_VISUAL_GUIDE.md  HF_SPACES_DEPLOYMENT.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  ISSUE_FIXED_SUMMARY.md  ISSUE_RESOLVED.md  MOBILE_OFFLINE_FIX_COMPLETE.md  MONGO_MIGRATION_README.md  MT5_ACCOUNT_INTEGRATION.md  MT5_BEFORE_AFTER_DIAGRAM.md  MT5_CONNECTION_GUIDE.md  MT5_CONNECTION_QUICKREF.md  MT5_CREDENTIAL_ISOLATION_FIX.md  MT5_EA_SIGNAL_API.md  MT5_EA_SIGNAL_API_DEPLOYMENT.md  (+58 more)
backend/: .env.example  Dockerfile  EXECUTION_LAYER_COMPLETE.md  EXECUTION_QUICKSTART.md  MULTI_USER_ISOLATION_ARCHITECTURE.md  MULTI_USER_ISOLATION_IMPLEMENTATION.md  check_debug.py  check_schema.py  check_user_3.py  check_user_login.py  check_users.py  create_test_user.py  debug_api.py  debug_database.py  diagnose_user_3.py  final_test.py  flask_output.txt  generate_signal.py  main.py  monitor_logs.py  pyproject.toml  requirements.txt  run_api.bat  run_api.sh  (+44 more)
(+140 files in other folders)
