[build-system]
requires = ["setuptools>=65.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sofaifx-bot"
version = "1.0.0"
description = "AI-powered Forex trading signal generator"
requires-python = ">=3.11"
dependencies = [
    "Flask==2.3.3",
    "Flask-CORS==4.0.0",
    "Flask-SQLAlchemy==3.0.5",
    "Flask-Bcrypt==1.0.1",
    "Flask-JWT-Extended==4.5.2",
    "python-dotenv==1.0.0",
    "requests==2.31.0",
    "pandas==2.2.2",
    "numpy==1.26.4",
    "scikit-learn==1.4.2",
    "scipy==1.11.4",
    "alpha-vantage==2.3.1",
    "python-telegram-bot==20.1",
    "schedule==1.2.0",
    "gunicorn==21.2.0",
    "cryptography>=41.0.0",
    "PyJWT>=2.8.0",
    "APScheduler==3.10.4",
    "huggingface_hub>=1.13.0",
    "transformers>=4.30.0",
    "uvicorn>=0.23.2",
]